<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"/>

        <EditText
            android:id="@+id/alarm_title"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/alarm_title"
            android:lines="1"
            android:minLines="1"
            android:scrollHorizontally="false"
            android:textSize="25dp"
            android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:onClick="setTime"
        android:id="@+id/time"
        android:layout_height="76dp"
        android:layout_below="@id/alarm_title">

        <Switch
            android:id="@+id/toggleAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="setTime"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/set_time"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="15dp" />


        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time"
        android:layout_marginRight="42dp"
        android:onClick="saveAlarm"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time"
        android:layout_marginLeft="42dp"
        android:onClick="showDeleteConfirmationDialog"
        android:text="@string/delete_button" />

</RelativeLayout>