<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/WebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="26dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Login"
        android:text="@string/spotify_login" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list"
        android:layout_alignParentEnd="true"
        android:text="@string/add_button"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/AlarmPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:text="@string/click_add_to_set_alarm"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="visible"
        tools:ignore="RelativeOverlap" />

    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/no_alarm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_alarm_text" />
    </RelativeLayout>






</RelativeLayout>